# ESP32

./: .gitignore  .gitmodules  README.md  build.sh  changelog.txt  flash.sh  sdkconfig  sdkconfig.old  setup.sh
delay_i2s/: sdkconfig
delay_i2s/inc/: adau1966a_driver.hpp  audio_dsp.h  bluetooth_receiver.hpp  esp_it.h  gpio_defs.h  i2s_driver.hpp
delay_i2s/main/: CMakeLists.txt  main.cpp
delay_i2s/src/: CMakeLists.txt  adau1966a_driver.cpp  audio_dsp.c  bluetooth_receiver.cpp  esp_it.c  i2s_driver.cpp
gui/window/: window.py
main/: CMakeLists.txt  adau1966a.cpp  adau1966a.hpp  audio_defs.h  audio_defs.hpp  audio_ringbuffer.hpp  comm_packet.hpp  gpio_defs.h  main.cpp  max98357a.hpp  uart_comm.cpp  uart_comm.hpp
p4/: CMakeLists.txt  sdkconfig  sdkconfig.old
p4/main/: CMakeLists.txt  adau1966a.cpp  adau1966a.hpp  gpio_defs.h  i2s_audio.c  i2s_audio.cpp  i2s_audio.h  i2s_audio.hpp  idf_component.yml  main.c  main.cpp  max98357a.cpp  test_esp_lcd_jd9365.c  uart_comm.hpp
p4/python/: serial_write.py  wav_generator.py
python/: requirements.txt  serial_read.py  serial_trx.py
rpi5/: README.md  client.py  requirements.txt  serial_comms.py  server.py  set_volume.py  test_audio.py
s3/: CMakeLists.txt  sdkconfig  sdkconfig.old
s3/inc/: esp_it.h  s3_gpio_config.h
s3/main/: CMakeLists.txt  main.cpp
s3/src/: esp_it.c
s3_common/: CMakeLists.txt  s3_config.h
s3_common/inc/: esp_it.h  s3_config.h
s3_master/: CMakeLists.txt  sdkconfig  sdkconfig_changes.txt
s3_slave/: CMakeLists.txt
s3_slave/main/: CMakeLists.txt  main.cpp  main_slave.cpp
(+12 files in other folders)
