idf_component_register(
    SRCS
        "main_slave.cpp"
    REQUIRES
        "src"
    PRIV_REQUIRES
        "esp_driver_gpio"
        "esp_ringbuf"
        "esp_driver_i2s"
        "esp_driver_uart"
        "esp_timer"
    INCLUDE_DIRS
        "."
        "${CMAKE_SOURCE_DIR}/../s3_common/inc"
)
